<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/general_margin">

    <TextView android:id="@+id/tv_winner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:maxLines="1"
        android:text="@string/winner_is"
        android:textSize="@dimen/result_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView android:id="@+id/iv_winner_logo"
        android:layout_width="@dimen/result_team_icon_size"
        android:layout_height="@dimen/result_team_icon_size"
        app:srcCompat="@drawable/anim_autobot"
        android:layout_marginTop="@dimen/secondary_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_winner_title"
        />

    <TextView android:id="@+id/tv_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="7"
        android:text="@string/result_description"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/secondary_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_winner_logo"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tap_anywhere_to_close"
        android:textAlignment="center"
        android:textSize="@dimen/result_tip_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_details"
        />

</androidx.constraintlayout.widget.ConstraintLayout>