<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="?attr/toolbarWithCloseStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:title=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <Button android:id="@+id/bt_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_margin"
                android:layout_marginEnd="@dimen/general_margin"
                android:layout_marginBottom="@dimen/general_margin"
                android:text="@string/build"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"/>
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
        android:id="@+id/rb_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:text="@string/alliance"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <RadioButton android:id="@+id/rb_autobot"
            android:layout_width="@dimen/team_icon_size"
            android:layout_height="@dimen/team_icon_size"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_autobot"
            android:scaleY="0.75"
            android:scaleX="0.75" />
        <RadioButton android:id="@+id/rb_decepticon"
            android:layout_width="@dimen/team_icon_size"
            android:layout_height="@dimen/team_icon_size"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_decepticon"
            android:scaleY="0.75"
            android:scaleX="0.75" />

    </RadioGroup>

    <EditText android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:inputType="text"
        android:hint="@string/nameHint"
        android:autofillHints="@string/nameHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rb_type" />

    <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_specifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        />

</androidx.constraintlayout.widget.ConstraintLayout>